# docx-translator

./: .gitignore  Makefile  README.md  pyproject.toml
src/python/docx_translator/: __init__.py  cli.py
src/python/docx_translator/core/: __init__.py  translator.py
src/python/docx_translator/engines/: __init__.py
src/python/docx_translator/engines/deepl_engine/: __init__.py  cache.py  client.py  engine.py
src/python/docx_translator/helpers/: subsection_remover.py
src/python/docx_translator/io/: docx_reader.py  docx_writer.py
src/python/docx_translator/scripts/: bench_translation.py
tests/: test_cli_translate_dir.py  test_deepl_engine.py  test_integration_docx.py
